# NBSlim-rs

./: .gitignore  Cargo.toml  README.md  README.zh.md
src/: cosiatec.rs  lib.rs  recursia.rs  sia.rs  siatec.rs  tec.rs  utils.rs
tests/fixtures/: dataset.json  notes.json
